# ChangeLog for app-text/pdf2djvu
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/pdf2djvu/ChangeLog,v 1.6 2011/08/31 04:18:49 radhermit Exp $

*pdf2djvu-0.7.10 (31 Aug 2011)

  31 Aug 2011; Tim Harder <radhermit@gentoo.org> +pdf2djvu-0.7.10.ebuild:
  Version bump.

*pdf2djvu-0.7.8 (23 Aug 2011)

  23 Aug 2011; Tim Harder <radhermit@gentoo.org> +pdf2djvu-0.7.8.ebuild:
  Version bump.

*pdf2djvu-0.7.7 (02 Apr 2011)

  02 Apr 2011; Samuli Suominen <ssuominen@gentoo.org> +pdf2djvu-0.7.7.ebuild:
  Version bump. Thanks to Jan Psota for mailing me.

*pdf2djvu-0.7.6 (28 Mar 2011)

  28 Mar 2011; Samuli Suominen <ssuominen@gentoo.org> +pdf2djvu-0.7.6.ebuild:
  Version bump wrt #358363 by Tim Harder.

  27 Jun 2010; Samuli Suominen <ssuominen@gentoo.org> pdf2djvu-0.7.4.ebuild:
  Run testsuite only if USE graphicsmagick is enabled wrt #325683 by Diego
  E. Pettenò.

*pdf2djvu-0.7.4 (23 Jun 2010)

  23 Jun 2010; Samuli Suominen <ssuominen@gentoo.org>
  +pdf2djvu-0.7.4.ebuild:
  Initial commit wrt #205675 by Dmitry S. Kulyabov.
